maze.lessons.maze.randommouse.RandomMouseMaze.scala.error
RandomMouseMaze:9: error: ')' expected but 'else' found.
  } else if (rdm == 1){
    ^